--- a/lang/chinese.json
+++ b/lang/chinese.json
@@ -1,4 +1,16 @@
 {
+  "categories": [
+    ["pronouns", "Personal Pronouns"],
+    ["adjectives", "Adjectives"]
+  ],
+  "pronouns":[
+    ["I (me)", "wo3", "我"],
+    ["You", "ni3", "你"],
+    ["He/She/It", "ta1", "他/她/它"],
+    ["We", "wo3men", "我们"],
+    ["You all", "ni3men", "你们"],
+    ["They", "ta1men", "他们/她们/它们"]
+  ],
   "adjectives": [
     ["Big", "dà", "大"],
     ["Small", "xiǎo", "小"],
